archectures/R-ML-RealTimingServing/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mls-model-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mls-model.resgrouplocation.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: mls-model.resgrouplocation.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mls-model-svc
          servicePort: 12800
